syntax = "proto3";

option go_package = "gitlab.jiagouyun.com/cloudcare-tools/datakit/internal/storage";

package storage;

message MapEntry {
  string key = 1;
  repeated string value = 2;
}

message Request {
  string method = 1;
  string url = 2;
  string proto = 3;
  int32 proto_major = 4;
  int32 proto_minor = 5;
  repeated MapEntry header = 6;
  bytes body = 7;
  int64 content_length = 8;
  repeated string transfer_encoding = 9;
  bool close = 10;
  string host = 11;
  repeated MapEntry form = 12;
  repeated MapEntry post_form = 13;
  string remote_addr = 14;
  string request_uri = 15;
}